--- a/index.html
+++ b/index.html
@@ -1,15 +1,174 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Erin's sike</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<title>Web-syke</title>
 </head>
 <body>
+<div>
+	<h1>Is this real?</h1>
+	<h2>Erin's Web-syke <br> Spring 2020</h2>
+</div>
 
-	<h1>Don't leave me higghhhhhhhhh don't leave me dryyyyyyyyyyy</h1>
+<div id="all">
+
+<div class="row">
+  <div class="column">
+  	Core Studio
+  	<p>Week 1</p>
+
+  	<p>Week 2</p>
+
+  	<p>Week 3</p>
+
+  	<p>Week 4</p>
+
+  	<p>Week 5</p>
+
+  	<p>Week 6</p>
+
+  	<p>Week 7</p>
+
+  	<p>Week 8</p>
+
+  	<p>Week 9</p>
+
+  	<p>Week 10</p>
+
+  	<p>Week 11</p>
+
+  	<p>Week 12</p>
+
+  	<p>Week 13</p>
+
+  	<p>Week 14</p>
+
+  	<p>Week 15</p>
 
 
-		<p>oh it's the best thing that you've ever had, the best thing you have had has gone away.</p>
 
-		<p><a href="page1.html">link to page 1</p>
+ </div>
+
+
+  <div class="column">
+    Core Lab
+  	<p><a href="page1.html">Week 1</a></p>
+
+  	<p><a href="labweek2/landingpage.html">Week 2</a></p>
+
+  	<p><a href="labweek3/landingpage.html">Week 3</a></p>
+
+  	<p>Week 4</p>
+
+  	<p>Week 5</p>
+
+  	<p>Week 6</p>
+
+  	<p>Week 7</p>
+
+  	<p>Week 8</p>
+
+  	<p>Week 9</p>
+
+  	<p>Week 10</p>
+
+  	<p>Week 11</p>
+
+  	<p>Week 12</p>
+
+  	<p>Week 13</p>
+
+  	<p>Week 14</p>
+
+  	<p>Week 15</p>
+   </div>
+
+</div>
+</div>
+		<!--<p>oh it's the best thing that you've ever had, the best thing you have had has gone away.</p>-->
+
+		<!--<p><a href="page1.html">link to page 1</a></p>-->
+
+	<h1>Probably not. I wouldn't worry about it.</h1>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+	<h1>unless...</h1>
 </body>
 </html>
