--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 <div class="row">
   <div class="column">
   	Core Studio
-  	<p>Week 1</p>
+  	<p><a href="studioweek3.html">Week 1</a></p>
 
   	<p>Week 2</p>
 
-  	<p>Week 3</p>
+  	<p><a href="studioweek3/studioweek3.html">Week 3</a></p>
 
   	<p>Week 4</p>
 
@@ -58,7 +58,7 @@
 
   	<p><a href="labweek3/landingpage.html">Week 3</a></p>
 
-  	<p>Week 4</p>
+  	<p><a href="labweek4/week4landingpage.html">Week 4</a></p>
 
   	<p>Week 5</p>
 
