--- a/labweek3/borscht1.html
+++ b/labweek3/borscht1.html
@@ -40,7 +40,7 @@ Add the vinegar, sugar, pepper and a pinch of salt and taste. Add a little more 
 	• &nbsp;-->
 
 
-<p><a href="Borscht.html">Back</a></p>
+<p><a href="file:///Users/erinrusek/Sites/lab1/websitetest/labweek3/borscht.html">Back</a></p>
 
 </body>
 </html>
