--- a/labweek3/borscht3.html
+++ b/labweek3/borscht3.html
@@ -37,7 +37,7 @@ Add <br>the <br>vinegar, <br>sugar, <br>pepper <br>and <br>a <br>pinch <br>of<br
 	• <em>
 	• &nbsp;-->
 
-	<p><a href="Borscht.html">Back</a></p>
+	<p><a href="file:///Users/erinrusek/Sites/lab1/websitetest/labweek3/borscht.html">Back</a></p>
 
 
 </body>
