--- a/labweek3/borscht4.html
+++ b/labweek3/borscht4.html
@@ -107,7 +107,7 @@
 	• <em>
 	• &nbsp;-->
 
-	<p><a href="Borscht.html">Back</a></p>
+	<p><a href="file:///Users/erinrusek/Sites/lab1/websitetest/labweek3/borscht.html">Back</a></p>
 
 
 </body>
