--- a/labweek3/borscht7.html
+++ b/labweek3/borscht7.html
@@ -45,7 +45,7 @@
 <em><============================></em>
 <br><br><br>
 
-	<p><a href="Borscht.html">Back</a></p>
+	<p><a href="file:///Users/erinrusek/Sites/lab1/websitetest/labweek3/borscht.html">Back</a></p>
 
 
 
