--- a/labweek3/borscht2.html
+++ b/labweek3/borscht2.html
@@ -43,7 +43,7 @@ Add the <span style="color:#FF6E30"> cider vinegar</span>, <span style="color:#E
 	• &nbsp;-->
 
 
-<p><a href="Borscht.html">Back</a></p>
+<p><a href="file:///Users/erinrusek/Sites/lab1/websitetest/labweek3/borscht.html">Back</a></p>
 
 </body>
 </html>
