--- a/labweek3/borscht5.html
+++ b/labweek3/borscht5.html
@@ -65,7 +65,7 @@
 
 
 
-	<p><a href="Borscht.html">Back</a></p>
+	<p><a href="file:///Users/erinrusek/Sites/lab1/websitetest/labweek3/borscht.html">Back</a></p>
 
 </body>
 </html>
