--- a/studioweek4/index.html
+++ b/studioweek4/index.html
@@ -2,52 +2,97 @@
 <html>
 <head>
 	<title>It's as if you were here</title>
+	<link rel="stylesheet" href="style.css">
+
+
 </head>
 <body>
-<h2>start screen</h2><br><br>
+
+
+	<div class="room">
+ 		<img src="room1/web-1.png" alt="Welcome room" style="width:110em;height:65em;border:0;"><br>
+	</div>
 
 
 
-
-<div class="parentdoor">
-Parent's door<br>
+<!--<a href="file:///Users/erinrusek/Sites/lab1/websitetest/studioweek4/room1/window1.html">-->
+ 
+<div class="photo1">
 </div>
 
+<div class="window">
+	<a href="room1/window1.html" target="_blank" style="width: 0px; 
+    border-left: 4em solid transparent; 
+    border-top: 12px solid yellow;
+    display: inline-block;
+    vertical-align: middle;
+    ">
+</a>
+</div>
 
+<div class="needlepoint">
+<a href="room1/needlepoint.html" target="_blank" style="width: 0px; 
+    border-left: 4em solid transparent; 
+    border-top: 12px solid yellow;
+    display: inline-block;
+    vertical-align: middle;
+    ">
+</a>
 
-<div class="siblingdoor">
-Sibling's door<br>
+</div>
+
+<div class="note">
+
+	<a href="room1/note.html" target="_blank" style="width: 0px; 
+    border-left: 4em solid transparent; 
+    border-top: 12px solid white;
+    display: inline-block;
+    vertical-align: middle;
+    ">
+</a>
+
 </div>
 
 
 <div class="yourdoor">
-Your door<br>
+
+<a href="room1/yourdoor.html" target="_blank" style="width: 0px; 
+    border-left: 4em solid transparent; 
+    border-top: 12px solid brown;
+    display: inline-block;
+    vertical-align: middle;
+    ">
+</a>
+</div>
+
+<div class="parentdoor">
+	<a href="room1/parentsdoor.html" target="_blank" style="width: 0px; 
+    border-left: 4em solid transparent; 
+    border-top: 12px solid brown;
+    display: inline-block;
+    vertical-align: middle;
+    ">
+</a>
+</div>
+
+<div class="sibling">
+	<a href="room1/siblingdoor.html" target="_blank" style="width: 0px; 
+    border-left: 4em solid transparent; 
+    border-top: 12px solid brown;
+    display: inline-block;
+    vertical-align: middle;
+    ">
+</a>
 </div>
 
 
 
-<div class="dresser">
-dresser<br>
+
+<div class="music">
+<audio controls>
+	<source src="trees.mp3" type="audio/mpeg">
+</audio>
 </div>
 
-
-
-<div class="window1">
-<a href="file:///Users/erinrusek/Sites/lab1/websitetest/studioweek4/room1/window1.html">
-  <img src="room1/window_PNG17645.png" alt="ITS A WINDOW" style="width:20em;height:10em;border:0;"><br>
-</div>
-
-
-<div class="window2">
-</a>window 2<br><br>
-</div>
-
-
-
-
-<div><audio controls>
-  <iframe src="https://www.youtube.com/watch?v=98j0V5ftlpE?rel=0&autoplay=1" type="audio/mpeg"></iframe>
-Your browser does not support the audio element.
-</audio></div>
 </body>
 </html>
