--- a/studioweek4/room1/window1.html
+++ b/studioweek4/room1/window1.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>What's out the Window?</title>
+	<title>The Window</title>
 </head>
 <body>
 
-<div class="one">
+<div class="window">
+ 		<img src="windowview.png" alt="Looking out the window" style="width:100%;height:100%;border:0;"><br>
+	</div>
 
-<img src="window_PNG17645.png" alt="Window1" style="height:100%; width:100%;">
-</div>
-<br>
 
-<a href="file:///Users/erinrusek/Sites/lab1/websitetest/studioweek4/index.html">home</a>
 
 </body>
 </html>
