--- a/studioweek4/index.html
+++ b/studioweek4/index.html
@@ -5,6 +5,16 @@
 	<link rel="stylesheet" href="style.css">
 
 
+	<script type="text/javascript">
+		var song = new Audio ();
+		song.src = "trees.mp3";
+	</script>
+
+	<script type="text/javascript">
+		var radio = new Audio ();
+		radio.src = "yes_it's_coldplay_deal_with_it.mp3";
+	</script>
+
 </head>
 <body>
 
@@ -86,12 +96,31 @@
 </div>
 
 
+<div class="ambiance">
 
 
-<div class="music">
+	<nav>
+	<a href="#" onmousedown="song.play () ">Don't feel at home yet</a>
+	</nav>
+</div>
+
+<!-- <div class="music">
 <audio controls>
 	<source src="trees.mp3" type="audio/mpeg">
-</audio>
+</audio> -->
+
+
+
+<div class="radio">
+	
+	<a href="#" onmousedown="radio.play () ">on</a>
+	
+
+</div>
+
+
+
+
 </div>
 
 </body>
