--- a/studioweek4/room1/yourdoor.html
+++ b/studioweek4/room1/yourdoor.html
@@ -4,6 +4,11 @@
 	<title>My Room</title>
 		<link rel="stylesheet" href="yourdoor.css">
 
+
+		<script type="text/javascript">
+		var song = new Audio ();
+		song.src = "static.mp3";
+	</script>
 </head>
 <body>
 
@@ -28,10 +33,10 @@
 </a>
 </div>
 
-<div class="music">
-<audio controls>
-	<source src="static.mp3" type="audio/mpeg">
-</audio>
+<div class="tvnoise">
+	<nav>
+	<a href="#" onmousedown="song.play () ">On</a>
+	</nav>
 </div>
 
 </body>
