--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
   	<p><a href="labweek4/week4landingpage.html">Week 4</a></p>
 
-  	<p>Week 5</p>
+    <p><a href="labweek5/week5.html">Week 5</a></p>
 
   	<p>Week 6</p>
 
