--- a/labweek4/reading.html
+++ b/labweek4/reading.html
@@ -37,7 +37,6 @@ In recipes 6-10 I added the next eight CSS elements allowed to us. Recipe 6 deal
 
 
 <img src="tenor.gif" type="CSS hard" style="width:35em; height: 25em; "><br><br><br>
-<a href="file:///Users/erinrusek/Sites/lab1/websitetest/index.html">Home</a>
-</div>
+<p><a href="../index.html">Home</a></p></div>
 </body>
 </html>
