--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
   	<p><a href="studioweek4/index.html">Week 5</a></p>
 
-  	<p>Week 6</p>
+    <p><a href="studioweek6/index.html">Week 6</a></p>
 
   	<p>Week 7</p>
 
