--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
     <p><a href="labweek5/week5.html">Week 5</a></p>
 
-  	<p>Week 6</p>
+    <p><a href="labweek6/index.html">Week 6</a></p>
 
   	<p>Week 7</p>
 
