--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
     <p><a href="labweek6/index.html">Week 6</a></p>
 
-  	<p>Week 7</p>
+    <p><a href="labweek7/jquery.html">Week 7</a></p>
 
   	<p>Week 8</p>
 
