--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
   	<p>Week 9</p>
 
-<p><a href="studioweek10/index.html">Week 10</a></p>
+    <p><a href="studioweek10/index.html">Week 10</a></p>
 
   	<p>Week 11</p>
 
@@ -70,7 +70,7 @@
 
   	<p>Week 9</p>
 
-  	<p>Week 10</p>
+  	<p><a href="labweek10/index.html">Week 10</a></p>
 
   	<p>Week 11</p>
 
