--- a/square/index1.html
+++ b/square/index1.html
@@ -8,7 +8,7 @@ Enter PIN #
 <label>Text box</label>
           <input type = "text"
                  id = "myText"
-                 value = "text here" />
+                 value = "" />
 </body>
 </html>
 
