--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
   	<p><a href="labweek10/index.html">Week 10</a></p>
 
-  	<p>Week 11</p>
+  	<p><a href="labweek12/uhoh.html">Week 11</a></p>
 
   	<p>Week 12</p>
 
