second commit rerouted links + audio

--- a/labweek11/index.html
+++ b/labweek11/index.html
@@ -14,22 +14,36 @@
 <body>
 
 	<div class="welcome">
-		
+		<script type="text/javascript">
+
+			setTimeout(function(){ alert("ℂ𝕝𝕚𝕔𝕜 𝔸𝕟𝕪𝕨𝕙𝕖𝕣𝕖 𝕥𝕠 ℝ𝕖𝕝𝕒𝕩 𝕒𝕟𝕕 ℝ𝕖𝕞𝕚𝕟𝕚𝕤𝕔𝕖"); }, 1000);
+
+		</script>
+	</div>
+
+	<div class="audio">
+		<audio controls="autoplay">
+			<source src="audio.mp3" type="audio/mpeg">
+		</audio>
 	</div>
 
 	<div class="background">
 		
 <!-- if then statement using css saturate property to de-saturate -->
+<!-- also blur -->
 
 	</div>
-
 
 
 	<div class="book">
-		
+		<!-- designates the book cover -->
 	</div>
 
-	<div class="home">
+	<div class="pages">
+		<!-- designates the pages on top of the cover -->
+	</div>
+
+	<div class="back">
 	
 	<p><a href="../index.html">Back to Virtual Reality</a></p></div>
 <!-- why is this not re-sizing my images??
