--- a/labweek11/index.html
+++ b/labweek11/index.html
@@ -22,8 +22,8 @@
 	</div>
 
 	<div class="audio">
-		<audio controls="autoplay">
-			<source src="audio.mp3" type="audio/mpeg">
+		<!-- <audio controls="autoplay">
+			<source src="audio.mp3" type="audio/mpeg"> -->
 		</audio>
 	</div>
 
