--- a/labweek11/index.html
+++ b/labweek11/index.html
@@ -21,11 +21,11 @@
 		</script>
 	</div>
 
-	<div class="audio">
-		<!-- <audio controls="autoplay">
-			<source src="audio.mp3" type="audio/mpeg"> -->
+	<!-- <div class="audio">
+		<audio controls="autoplay">
+			<source src="audio.mp3" type="audio/mpeg">
 		</audio>
-	</div>
+	</div> -->
 
 	<div class="background">
 		
