--- a/labweek11/begin.html
+++ b/labweek11/begin.html
@@ -2,21 +2,76 @@
 <html>
 <head>
 	<title>Come Sit</title>
+	<meta charset="utf-8">
+	<script type="text/javascript" src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+	<!-- <script type="text/javascript" src="main.js"></script>
+	<script type="text/javascript" src="jquery.min.js"></script> -->
+
+	<!-- CSS for background image -->
+	  <style>
+        * {
+            margin: 0;
+            padding: 0;
+        }
+        .imgbox {
+            display: grid;
+            height: 100%;
+        }
+        .backpic {
+        	position: relative;
+            max-width: 100%;
+            max-height: 100vh;
+            margin: auto;
+        }
+    </style>
 </head>
 <body>
+<!-- help -->
+	<div class="welcome">
+		<script type="text/javascript">
 
-<div class="background"></div>
+			setTimeout(function(){ alert("𝕀𝕗 𝕪𝕠𝕦 𝕟𝕖𝕖𝕕 𝕙𝕖𝕝𝕡, 𝕗𝕖𝕖𝕝 𝕗𝕣𝕖𝕖 𝕥𝕠 𝕧𝕚𝕤𝕚𝕥 𝕔𝕠𝕟𝕤𝕠𝕝𝕖"); }, 1000);
 
+		</script>
+	</div>
+
+<!-- Background image -->
+<div class="imgbox">
+	<img class="backpic" src="fireplace.gif" alt="A hecking cozy living room with a fireplace and books and a couch, and, books you can pull out?">
+
+</div>
+
+<!-- Begin book click links -->
 <div class="click-book">
-		<p><a href="index.html">TEMPORARY LINK</a></p></div>
+		<p><a href="index.html" target="_blank" style="
+			width: 10px; 
+		    border-left: 4em solid transparent; 
+		    border-top: 12px solid #b5b8bd;
+		    top: 85%;
+		    left: 60%;
+		    display: inline-block;
+		    position: absolute;
+		    z-index: 4;
+		    opacity: .3;
+		    max-height: 2px;
+		    max-width: 10px;
+		    "><!-- TEMPORARY LINK 1 -->
+		</a></p>
+		<p><a href="book2.html" target="_blank">TEMPORARY LINK 2</a></p>
+		<p><a href="book3.html" target="_blank">TEMPORARY LINK 3</a></p>s
 
 </div>
 <!-- use target="_blank" once you have clickable objects -->
-<div class="fuego"></div>
+<!-- thats a fire beech -->
+
 
 <div class="home">
 	<p><a href="../index.html">Back to Virtual Reality</a></p></div>
 </div>
 
 </body>
+	<script type="text/javascript">
+		document.body.style.backgroundColor = "black";
+
+	</script>
 </html>
