audio pls dont f**k up my commit

--- a/labweek11/begin.html
+++ b/labweek11/begin.html
@@ -7,6 +7,11 @@
 	<!-- <script type="text/javascript" src="main.js"></script>
 	<script type="text/javascript" src="jquery.min.js"></script> -->
 
+	<!-- audio -->
+	<script type="text/javascript">
+		var sound = new Audio ();
+		sound.src = "rain.mp3";
+	</script>
 	<!-- CSS for background image -->
 	  <style>
         * {
@@ -69,9 +74,24 @@
 	<p><a href="../index.html">Back to Virtual Reality</a></p></div>
 </div>
 
+<!-- Audio -->
+<div class="sound">
+	<a href="#" onmousedown="sound.play ()
+		    ">on</a>
+</div>
+
+
 </body>
 	<script type="text/javascript">
 		document.body.style.backgroundColor = "black";
 
+	</script>
+	<!-- console guidance -->
+	<script type="text/javascript">
+
+		console.log('A book on the coffee table, a red book, and one by the daffodils');
+		console.log('for a more immersive experience, click "on"');
+
+		
 	</script>
 </html>
