--- a/labweek11/index.html
+++ b/labweek11/index.html
@@ -32,8 +32,8 @@
             max-height: 100vh;
             margin: auto;
             z-index: -5;
-             filter: blur(8px);
-  -webkit-filter: blur(8px);
+            filter: blur(8px);
+  			-webkit-filter: blur(8px);
 
         }
     </style>
@@ -46,15 +46,16 @@
 	<div class="welcome">
 		<script type="text/javascript">
 
-			setTimeout(function(){ alert("ℂ𝕝𝕚𝕔𝕜 𝔸𝕟𝕪𝕨𝕙𝕖𝕣𝕖 𝕥𝕠 ℝ𝕖𝕝𝕒𝕩 𝕒𝕟𝕕 ℝ𝕖𝕞𝕚𝕟𝕚𝕤𝕔𝕖"); }, 1000);
+			setTimeout(function(){ alert("ℂ𝕝𝕚𝕔𝕜 𝕠𝕟 𝕥𝕙𝕖 𝕓𝕠𝕠𝕜 𝕥𝕠 ℝ𝕖𝕝𝕒𝕩 𝕒𝕟𝕕 ℝ𝕖𝕞𝕚𝕟𝕚𝕤𝕔𝕖"); }, 1000);
 
 		</script>
 	</div>
 
 
 	<div class="imgbox">
-		<img class="backpic" src="fireplace.gif" alt="A hecking cozy living room with a fireplace and books and a couch, and, books you can pull out?">
-
+		<a href="begin.html">
+			<img class="backpic" src="fireplace.gif" alt="A hecking cozy living room with a fireplace and books and a couch, and, books you can pull out?">
+		</a>	
 	</div>
 	<!-- <div class="audio">
 		<audio controls="autoplay">
@@ -65,7 +66,7 @@
 	<div class="background">
 		
 <!-- if then statement using css saturate property to de-saturate -->
-<!-- also blur -->
+
 
 	</div>
 
@@ -82,10 +83,10 @@
 	</div>
 
 	<div class="back">
-	
-	<p><a href="../index.html">Back to Virtual Reality</a></p></div>
-<!-- why is this not re-sizing my images??
- -->
+
+	</div>
+	<!-- <p><a href="../index.html">Back to Virtual Reality</a></p> -->
+
 </body>
 
 	<script type="text/javascript">
