--- a/labweek11/index.html
+++ b/labweek11/index.html
@@ -7,53 +7,26 @@
 	<script type="text/javascript" src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 	<script type="text/javascript" src="main.js"></script>
 	<script type="text/javascript" src="jquery.min.js"></script>
-	<!-- CSS for background image -->
-	  <style>
-	  	body {
-		    opacity: 1;
-		    transition: 1s opacity;
-		}
-		body.fade-out {
-		    opacity: 0;
-		    transition: none;
-		}
-        * {
-            margin: 0;
-            padding: 0;
-        }
-        .imgbox {
-            display: grid;
-            height: 100%;
-            z-index: -5;
-        }
-        .backpic {
-        	position: relative;
-            max-width: 100%;
-            max-height: 100vh;
-            margin: auto;
-            z-index: -5;
-            filter: blur(8px);
-  			-webkit-filter: blur(8px);
-
-        }
-    </style>
+	<link href="https://fonts.googleapis.com/css2?family=Gochi+Hand&display=swap" rel="stylesheet">
 </head>
 
 
 
 <body>
-
+	<!-- Alert only once -->
 	<div class="welcome">
 		<script type="text/javascript">
-
+			// var alerted = localStorage.getItem('alerted') || '';
+   //  			if (alerted != 'yes') {
+   //   			alert("ℂ𝕝𝕚𝕔𝕜 𝕠𝕟 𝕥𝕙𝕖 𝕓𝕠𝕠𝕜 𝕥𝕠 ℝ𝕖𝕝𝕒𝕩 𝕒𝕟𝕕 ℝ𝕖𝕞𝕚𝕟𝕚𝕤𝕔𝕖");
+   //  	 		localStorage.setItem('alerted','yes');
+   // 			 }
 			setTimeout(function(){ alert("ℂ𝕝𝕚𝕔𝕜 𝕠𝕟 𝕥𝕙𝕖 𝕓𝕠𝕠𝕜 𝕥𝕠 ℝ𝕖𝕝𝕒𝕩 𝕒𝕟𝕕 ℝ𝕖𝕞𝕚𝕟𝕚𝕤𝕔𝕖"); }, 1000);
-
 		</script>
 	</div>
 
-
 	<div class="imgbox">
-		<a href="begin.html">
+		<a href="begin.html" style=".grab {cursor: -webkit-grab; cursor: grab;}">
 			<img class="backpic" src="fireplace.gif" alt="A hecking cozy living room with a fireplace and books and a couch, and, books you can pull out?">
 		</a>	
 	</div>
@@ -62,12 +35,8 @@
 			<source src="audio.mp3" type="audio/mpeg">
 		</audio>
 	</div> -->
-
 	<div class="background">
-		
 <!-- if then statement using css saturate property to de-saturate -->
-
-
 	</div>
 
 	<div class="book">
@@ -83,10 +52,12 @@
 	</div>
 
 	<div class="back">
-
-	</div>
 	<!-- <p><a href="../index.html">Back to Virtual Reality</a></p> -->
+	</div>
 
+	<div id="texty">
+	<!-- id for mouse typing -->
+	</div>
 </body>
 
 	<script type="text/javascript">
@@ -101,13 +72,55 @@
 			})
 // chooses .pic from the array to add the event listener to
 			.html(photos[counter%photos.length].pic)
+			.append(photos[counter%photos.length].name)
+			// .append(photos[counter%photos.length].desc)
+				.hover(function(){
+					$("desc").css({'opacity': 100})
+					// $( this ).fadeOut( 100 );
+  			// 		$( this ).fadeIn( 500 );
+				})
+			// appends the variable to the HTML
+			counter = counter+1;
+			$('body').append(photoclick)
+			});
+
 			// .css({'top': event.pageY-90, 'left': event.pageX-90, 'height':0,})
 			// $("body").css({"width": "10px", "height": "10px"});
 
-// appends the variable to the HTML
-			counter = counter+1;
-			$('body').append(photoclick)
-		});
+
+	</script>
+
+	<!-- <script type="text/javascript">
+		// keyboard typing script!!!!!!!!!!
+
+			function typing(text) {
+				// var	i=0;
+				console.log(text)
+
+			// for(var i=0; i<text.length; i++){
+				if(text.length){
+					document.getElementById("texty").innerHTML += text.charAt(0);
+					// i++;
+					setTimeout(typing,50, text.slice(1));
+				}
+			}
+	</script> -->
+
+	<!-- blue memories fading in-->
+	<script type="text/javascript">
+		for(var i=0; i<photos.length; i++){
+			var hoverdesc = $('<div/>', {
+					'class': 'hoverArea'
+				})
+				.html(photos[i].desc)
+				.append(photos[i].pic)
+				.hover(function(){
+					$(this).css({'opacity': 100})
+					// $( this ).fadeOut( 100 );
+  			// 		$( this ).fadeIn( 500 );
+				});
+			$('body').append(hoverdesc)
+		}
 	</script>
 
 	<!-- fadeeeeeee outtttttt againnnnnnnnnn -->
