--- a/labweek11/index.html
+++ b/labweek11/index.html
@@ -136,12 +136,17 @@
 		};
 	</script>
 
+
+
 	<!-- fadeeeeeee outtttttt againnnnnnnnnn -->
 	<script>
 		document.body.className += ' fade-out';
 		$(function() {
 	    $('body').removeClass('fade-out');
 	});
+	</script>
+	<script type="text/javascript">
+			console.log('Click the scrapbook to take your mind off of things.');
 	</script>
 
 </html>
